2009-12-29  Torbjorn Granlund  <tege@gmplib.org>

	* tune/tuneup.c (tune_mu_div): Set min_size to 6, DC functions require
	this.

	* tests/mpn/t-div.c: Call mu_div functions with operands that generate
	a high quotient limb.

	* mpn/generic/mu_div_qr.c: Rewrite to return a high quotient limb,
	to let dividend argument be constant, and as a general cleanup.
	* mpn/generic/mu_divappr_q.c: Likewise.
	* mpn/generic/mu_div_q.c: Likewise.
	* gmp-impl.h: Update declarations of changed functions.

	* mpn/generic/invertappr.c (mpn_invertappr): Allocate scratch space
	when caller passed NULL.

2009-12-28  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/toom_couple_handling.c: Prefix name with mpn_.
	* gmp-impl.h: Likewise.
	* mpn/generic/toom63_mul.c: Likewise.
	* mpn/generic/toom6_sqr.c: Likewise.
	* mpn/generic/toom6h_mul.c: Likewise.
	* mpn/generic/toom8_sqr.c: Likewise.
	* mpn/generic/toom8h_mul.c: Likewise.

	* configure.in (gmp_mpn_functions_optional) Move "com" from here...
	(gmp_mpn_functions): ...to here.
	* mpn/generic/com.c: New file.
	* (mpn_com): New name for mpn_com_n.  Make public.
	* (mpn_neg): Analogous changes.

	* tune/tuneup.c (tune_mu_div, tune_mu_bdiv): Set step_factor.

	* tune/common.c, tune/speed.c, tune/speed.h: Support measuring
	mpn_lshiftc.

	* tests/devel/try.c: Test mpn_lshiftc.
	* tests/refmpn.c (refmpn_com): New function.
	(refmpn_lshiftc): Likewise.

	* configure.in (gmp_mpn_functions_optional) Move lshiftc from here...
	(gmp_mpn_functions): ...to here.
	* mpn/generic/lshiftc.c: New file.
	* mpn/x86_64/lshiftc.asm: New file.
	* mpn/x86_64/core2/lshiftc.asm: New file.
	* mpn/generic/mul_fft.c (mpn_lshiftc): Remove.

	* mpn/x86_64/core2/lshift.asm: Tweak for better Core iN performance.
	* mpn/x86_64/core2/rshift.asm: Likewise.

2009-12-27  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/mul.c: Use toom6h and toom8h for almost balanced.

	* mpn/generic/mullo_n.c (mpn_dc_mullo_n): New ratio, to be used in
	Toom-8 range.
